--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <p class="message">Lagi di buat Ksabar</p>
+    <p class="message">Lagi di buat Ksabar.</p>
     
     <script src="script.js"></script>
 </body>
